--- a/dnd-upgrade/src/create-defenses-tab.html
+++ b/dnd-upgrade/src/create-defenses-tab.html
@@ -61,7 +61,7 @@
 
         _newDefenses: function(e){
             this.push("defensesList", {
-				name: "Armor/Magic Resistence/...",
+				name: "Armor/Magic Resistence",
 				value: 0,
 				baseValue: 0,
 				statusBase: "None",
