--- a/dnd-upgrade/src/create-resources-tab.html
+++ b/dnd-upgrade/src/create-resources-tab.html
@@ -61,7 +61,7 @@
 
         _newResources: function(e){
             this.push("resourcesList", {
-                name: "HP/MP/...",
+                name: "HP/MP",
                 value: 0,
                 baseValue: 0,
                 statusBase: "None",
