--- a/dnd-upgrade/src/create-skills-tab.html
+++ b/dnd-upgrade/src/create-skills-tab.html
@@ -61,7 +61,7 @@
 
         _newSkills: function(e){
             this.push("skillsList", {
-                name: "Diplomacy/Heal...",
+                name: "Diplomacy/Heal",
                 value: 0,
                 baseValue: 10,
                 statusBase: "None",
