--- a/dnd-upgrade/src/create-status-card.html
+++ b/dnd-upgrade/src/create-status-card.html
@@ -5,7 +5,8 @@
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<!--link rel="import" href="../bower_components/paper-fab/paper-fab.html"-->
 
 <dom-module id="create-status-card">
     <template>
@@ -19,15 +20,15 @@
                 margin-bottom: 16px;
             }
 
-            .paper-fab-dependency {
-                position: absolute;
-                width: 25px;
-                min-width: 25px;
-                height: 25px;
-                min-height: 25px;
-                padding: 4px;
-                top: 25px;
-                right: -10px;
+            .dependency-add-button {
+                margin: 8px 0 0 0;
+                color: var(--secondary-color);
+            }
+
+            .dependency-remove-button {
+                @apply(--layout-self-end);
+                min-width: 40px;
+                color: #F44336;
             }
 
             .card-actions-button {
@@ -46,7 +47,7 @@
                 margin: 0 8px;
             }
             .dependency-content:nth-child(3) {
-                margin-left: 8px;
+                margin: 0 8px;
             }
         </style>
 
@@ -79,7 +80,10 @@
                                              class="dependency-content">
                             <paper-listbox class="dropdown-content"
                                            attr-for-selected="modifier-type"
-                                           selected="{{ item.location }}">
+                                           selected="{{ item.location }}"
+                                           id="{{ index }}"
+                                           on-iron-select="_dependencyLocationChanged">
+                                <paper-item modifier-type="None">None</paper-item>
                                 <paper-item modifier-type="statusList">Status</paper-item>
                                 <paper-item modifier-type="resourcesList">Resource</paper-item>
                                 <paper-item modifier-type="defensesList">Defense</paper-item>
@@ -90,10 +94,11 @@
                         <paper-dropdown-menu label="Modifier"
                                              class="dependency-content">
                             <paper-listbox class="dropdown-content"
+                                           id="name{{ index }}"
                                            attr-for-selected="modifier-name"
                                            selected="{{ item.name }}">
                                 <template is="dom-if"
-                                          if="{{ _locationIsStatusList(item.location, index) }}">
+                                          if="{{ _locationIsStatusList(item.location) }}">
                                     <template is="dom-repeat"
                                               items="{{ statusList }}">
                                         <paper-item modifier-name="{{ item.name }}">{{ item.name }}</paper-item>
@@ -129,16 +134,14 @@
                                    bind-value="{{ item.value }}">
                         </paper-input-container>
 
-                        <paper-fab mini
-                                   icon="remove"
-                                   class="paper-fab-dependency"
-                                   on-click="_addDependency"></paper-icon-button>
+                        <paper-icon-button class="dependency-remove-button"
+                                           icon="remove"
+                                           on-click="_deleteDependency"></paper-icon-button>
 
                     </div>
                 </template>
-                <paper-fab mini
-                           icon="add"
-                           on-click="_addDependency"></paper-icon-button>
+                <paper-button class="dependency-add-button"
+                              on-click="_addDependency">Add Dependency</paper-button>
             </div>
             <div class="card-actions">
                 <paper-button class="card-actions-button"
@@ -190,14 +193,14 @@
 
         _addDependency: function(e){
             this.push("dependencyList", {
-                location: "statusList",
+                location: "None",
                 name: null,
                 value: null
             });
         },
 
-        _deleteDependency: function(index){
-            this.splice("dependencyList", index, 1);
+        _deleteDependency: function(e){
+            this.splice("dependencyList", e.model.__data__.index, 1);
         },
 
         _requestDeleteStatus: function(e){
@@ -206,9 +209,13 @@
             });
         },
 
-        _locationIsStatusList: function(type, index){
-            console.log(index);
-            console.log(this.dependencyList[index].name);
+        _dependencyLocationChanged: function(e, detail){
+            if(this.$$('#name' + detail.item.parentElement.id) !== null){
+                this.$$('#name' + detail.item.parentElement.id).selected = null;
+            }
+        },
+
+        _locationIsStatusList: function(type){
             return type == 'statusList';
         },
 
