--- a/dnd-upgrade/src/snd-basesheet-data.html
+++ b/dnd-upgrade/src/snd-basesheet-data.html
@@ -19,8 +19,7 @@
         properties: {
             baseSheet: {
                 type: Object,
-                notify: true,
-                reflectToAttribute: true
+                notify: true
             }
         },
 
@@ -40,7 +39,7 @@
                 system: "",
                 statusList: [
                     {
-                        name: "Str/Dex/Int/...",
+                        name: "Strength",
                         value: 0,
                         baseValue: 0,
                         minimumModifierValue: 10,
@@ -49,9 +48,9 @@
                         volatileBonus: 0,
                         dependencyList: [
                             {
-                            	location: "statusList",
+                            	location: "None",
                             	name: "None",
-                            	modifier: 1
+                            	modifier: 0
 
                             }
                         ]
@@ -60,7 +59,7 @@
                 // { *name: "Initiative", value: SUM, *baseValue: 10, *levelModifier: 0, persistBonus: 0, volatileBonus: 0, dependency: [{ location: 'skillsList', name: 'High Perception', modifier: 1 }] }], ...
                 resourcesList: [
                     {
-                        name: "HP/MP/...",
+                        name: "HP",
                         value: 0,
                         baseValue: 0,
                         levelModifier: 0.5,
@@ -68,9 +67,9 @@
                         volatileBonus: 0,
                         dependencyList: [
                             {
-                            	location: "statusList",
+                            	location: "None",
                             	name: "None",
-                            	modifier: 1
+                            	modifier: 0
 
                             }
                         ]
@@ -79,7 +78,7 @@
                 // { *name: "hp", value: SUM, *baseValue: 10, *statusBase: Vit, *statusBaseModifier: 1, *levelModifier: 0, persistBonus: 0, volatileBonus: 0 }, ...
                 defensesList: [
                     {
-                        name: "Armor/Magic Resistence/...",
+                        name: "Armor",
                         value: 0,
                         baseValue: 10,
                         levelModifier: 0.5,
@@ -87,9 +86,9 @@
                         volatileBonus: 0,
                         dependencyList: [
                             {
-                            	location: "statusList",
+                            	location: "None",
                             	name: "None",
-                            	modifier: 1
+                            	modifier: 0
 
                             }
                         ]
@@ -100,7 +99,7 @@
                 // { *name: "attackName", AttackValue: SUM, DamageValue: SUM, *baseAttack: 10, *attackStatusBase: Vit, *attackStatusBaseModifier: 1, *attackLevelModifier: 0, attackpersistBonus: 0, attackVolatileBonus: 0, *baseDamage: 10, *damageStatusBase: Vit, *damageStatusBaseModifier: 1, *damageLevelModifier: 0, damagepersistBonus: 0, damageVolatileBonus: 0 }, ...
                 skillsList: [
                     {
-                        name: "Diplomacy/Heal...",
+                        name: "Diplomacy",
                         value: 0,
                         baseValue: 10,
                         levelModifier: 0.5,
@@ -108,9 +107,9 @@
                         volatileBonus: 0,
                         dependencyList: [
                             {
-                            	location: "statusList",
+                            	location: "None",
                             	name: "None",
-                            	modifier: 1
+                            	modifier: 0
 
                             }
                         ]
